# t212-tax-and-profit

./: .gitignore  README.md  pyproject.toml
model/: __init__.py
models/: input.py  output.py
notebooks/: csv_parser.ipynb
services/: csv_consolidator.py  event_emitter.py
services/event_processors/: __init__.py  deposit_withdrawal.py  dividend.py  processor.py  profit_loss.py
tests/services/event_processors/: test_profit_loss.py  test_utils.py
tools/: csv_consolidator.py
